--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
-*$py.class
-
+*$py.clas
+s
 .vs/
-Voronoi2D/.vs/
+Voronoi2D/.vs
 
 # C extensions
 *.so
